--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-function changecolor() {
-document.getElementById(""heading1").style.color="yellow";
-} 
+body(
+text-align: center;
+)
+
+h1(
+color: purple;
+)
